# flip

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: backupmain.cpp  flip.c  flip.h  hash_grid.c  hash_grid.h  main.c  main.cpp  main_original.c
